--- a/src/main/resources/templates/formAdmin.html
+++ b/src/main/resources/templates/formAdmin.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-</html>
-
 <head>
     <meta charset="UTF-8">
     <title>Formulario Admins</title>
-    <link type="text/css" rel="stylesheet" href="/Css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="/Css/styles.css">
 
 </head>
@@ -15,7 +14,6 @@
     <br>
     <h3>Formulario de Administrativos</h3>
     <hr>
-
 
     <!-- Formulario -->
     <div class="centrar">
