--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,19 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Reto 4 | Proyecto cabañas</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script type="text/javascript">
+        $.get("/user", function (data) {
+            $("#user").html(data.name);
+            $(".unauthenticated").hide();
+            $(".authenticated").show();
+        });
+    </script>
 </head>
 
 <body>
-	<h2><span style="text-decoration: blink;font-style: italic;" >Haga click sobre aquella entidad que desee visualizar.</span></h2>
-	<hr>
-    <ul>
-        <li><h3><a href="category">Categorias</a></h3></li>
-        <li><h3><a href="cabin">Cabañas</a></h3></li>
-        <li><h3><a href="client">Clientes</a></h3></li>
-        <li><h3><a href="msg">Mensajes</a></h3></li>
-        <li><h3><a href="reservation">Reservas con sus calificaciones</a></h3></li>
-        <li><h3><a href="formAdmin">Usuarios administrativos</a></h3></li>
-    </ul>
+    <div class="container unauthenticated">
+        Para iniciar sesion en github: <a href="/oauth2/authorization/github">haz click aqui</a>
+    </div>
+
+
+    <div class="container authenticated" style="display: none;">
+        <p>Usuario autorizado</p>
+
+        Autenticado como: <span id="user"></span>
+        <h2><span style="text-decoration: blink;font-style: italic;">Haga click sobre aquella entidad que desee
+                visualizar.</span></h2>
+        <hr>
+        <ul>
+            <li>
+                <h3><a href="category">Categorias</a></h3>
+            </li>
+            <li>
+                <h3><a href="cabin">Cabañas</a></h3>
+            </li>
+            <li>
+                <h3><a href="client">Clientes</a></h3>
+            </li>
+            <li>
+                <h3><a href="msg">Mensajes</a></h3>
+            </li>
+            <li>
+                <h3><a href="reservation">Reservas con sus calificaciones</a></h3>
+            </li>
+            <li>
+                <h3><a href="formAdmin">Usuarios administrativos</a></h3>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
