--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Reto 4 | Proyecto cabañas</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script type="text/javascript">
@@ -13,6 +14,13 @@
             $(".authenticated").show();
         });
     </script>
+
+    <script type="text/javascript">
+        $.get("/avatar", function (data) {
+            $("#avatar").attr("src", data.avatar_url)
+        });
+    </script>
+
 </head>
 
 <body>
@@ -22,9 +30,8 @@
 
 
     <div class="container authenticated" style="display: none;">
-        <p>Usuario autorizado</p>
-
-        Autenticado como: <span id="user"></span>
+        Bienvenido <span id="user"></span>
+        <img id="avatar" height="30" width="30" alt="avatar">
         <h2><span style="text-decoration: blink;font-style: italic;">Haga click sobre aquella entidad que desee
                 visualizar.</span></h2>
         <hr>
@@ -36,7 +43,7 @@
                 <h3><a href="cabin">Cabañas</a></h3>
             </li>
             <li>
-                <h3><a href="client">Clientes</a></h3>
+                <h3><a href="formClient">Clientes</a></h3>
             </li>
             <li>
                 <h3><a href="msg">Mensajes</a></h3>
