finalizado formulario clientes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,19 +37,19 @@
         <hr>
         <ul>
             <li>
-                <h3><a href="category">Categorias</a></h3>
+                <h3><a href="formCategory">Categorias</a></h3>
             </li>
             <li>
-                <h3><a href="cabin">Cabañas</a></h3>
+                <h3><a href="formCabin">Cabañas</a></h3>
             </li>
             <li>
                 <h3><a href="formClient">Clientes</a></h3>
             </li>
             <li>
-                <h3><a href="msg">Mensajes</a></h3>
+                <h3><a href="formMsg">Mensajes</a></h3>
             </li>
             <li>
-                <h3><a href="reservation">Reservas con sus calificaciones</a></h3>
+                <h3><a href="formReservation">Reservas con sus calificaciones</a></h3>
             </li>
             <li>
                 <h3><a href="formAdmin">Usuarios administrativos</a></h3>
