--- a/src/main/resources/templates/updateCabin.html
+++ b/src/main/resources/templates/updateCabin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http:///www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Actualizar Admin</title>
+    <title>Clientes</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,19 +14,21 @@
   </head>
 
   <body>
+    <button type="button" onclick="location.href='/formCabin'">Regresar</button>
+
+    <h4>Formulario de Cabañas</h4>
+    <hr />
+
     <!-- Formulario -->
     <div class="centrar">
       <form
-        th:action="@{/formAdmin/update/save}"
+        th:object="${cabin}"
+        th:action="@{/formCabin/update/save}"
         method="post"
-        th:object="${admin}"
       >
-        <br />
-        <h3>Editar Administrador</h3>
-        <hr />
         <fieldset>
-          <!-- Log de erorres de validacion-->
-          <div th:object="${admin}" class="errorblock">
+          <!-- Log de errores de validacion-->
+          <div th:object="${cabin}" class="errorblock">
             <ul
               th:if="${#fields.hasErrors('*')}"
               class="alert alert-danger"
@@ -40,35 +42,34 @@
             </ul>
           </div>
           <caption>
-            Datos del Administrador
+            Datos de la Cabaña
           </caption>
           <table class="form">
             <tr>
               <div class="form-group">
-                <td><label for="nombre">Nombre del Administrador</label></td>
+                <input type="hidden" th:field="*{id}" />
+                <td><label for="nombre">Nombre de la Cabaña</label></td>
                 <td>
                   <input
                     th:field="*{name}"
-                    id="nombre_admin"
-                    placeholder="Escribe tu nombre"
+                    id="name_cabin"
+                    placeholder="Escriba el nombre"
                     type="text"
                     class="form-control"
                   />
                 </td>
               </div>
             </tr>
-
+            <tr></tr>
             <tr>
               <div class="form-group">
-                <input type="hidden" th:field="*{id}" />
-
-                <td><label for="nombre">Email del Administrador</label></td>
+                <td><label for="marca">Marca de la Cabaña</label></td>
                 <td>
                   <input
-                    th:field="*{email}"
-                    id="email_admin"
-                    placeholder="Escribe tu e-mail"
-                    type="email"
+                    th:field="*{brand}"
+                    id="name_cabin"
+                    placeholder="Escriba la marca"
+                    type="text"
                     class="form-control"
                   />
                 </td>
@@ -77,16 +78,33 @@
             <tr>
               <div class="form-group">
                 <td>
-                  <label for="nombre">Contraseña del Administrador</label>
+                  <label for="rooms">Habitaciones</label>
                 </td>
                 <td>
                   <input
-                    th:field="*{password}"
-                    id="psswd_admin"
-                    placeholder="Escribe la contraseña"
-                    type="password"
+                    th:field="*{rooms}"
+                    id="rooms_cabin"
+                    type="number"
                     class="form-control"
+                    min="1"
+                    required
                   />
+                </td>
+              </div>
+            </tr>
+            <tr>
+              <div class="form-group">
+                <td>
+                  <label for="descripcion">Descripcion</label>
+                </td>
+                <td>
+                  <textarea
+                    th:field="*{description}"
+                    id="description_cabin"
+                    type="text"
+                    placeholder="Escriba la descripción aqui"
+                    class="form-control"
+                  ></textarea>
                 </td>
               </div>
             </tr>
@@ -98,7 +116,6 @@
                 Actualizar
               </button>
             </td>
-
             <td>
               <button class="btn btn-info" title="Deshacer" type="reset">
                 Deshacer
@@ -108,7 +125,7 @@
               <button
                 type="button"
                 class="btn btn-danger"
-                onclick="location.href='/formAdmin/'"
+                onclick="location.href='/formCabin/'"
               >
                 Cancelar
               </button>
@@ -117,6 +134,5 @@
         </fieldset>
       </form>
     </div>
-    <br />
   </body>
 </html>
