--- a/src/main/resources/templates/updateCategory.html
+++ b/src/main/resources/templates/updateCategory.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http:///www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Actualizar Admin</title>
+    <title>Editar Categoria</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,19 +14,21 @@
   </head>
 
   <body>
+    <button type="button" onclick="location.href='/'">Regresar</button>
+
+    <h4>Actualizar Categoria</h4>
+    <hr />
+
     <!-- Formulario -->
     <div class="centrar">
       <form
-        th:action="@{/formAdmin/update/save}"
+        th:object="${category}"
+        th:action="@{/formCategory/update/save}"
         method="post"
-        th:object="${admin}"
       >
-        <br />
-        <h3>Editar Administrador</h3>
-        <hr />
         <fieldset>
           <!-- Log de erorres de validacion-->
-          <div th:object="${admin}" class="errorblock">
+          <div th:object="${category}" class="errorblock">
             <ul
               th:if="${#fields.hasErrors('*')}"
               class="alert alert-danger"
@@ -40,53 +42,38 @@
             </ul>
           </div>
           <caption>
-            Datos del Administrador
+            Datos de la Categoria
           </caption>
           <table class="form">
             <tr>
               <div class="form-group">
-                <td><label for="nombre">Nombre del Administrador</label></td>
+                <input type="hidden" th:field="*{id}" />
+
+                <td><label for="nombre">Nombre de la Categoria</label></td>
                 <td>
                   <input
                     th:field="*{name}"
-                    id="nombre_admin"
-                    placeholder="Escribe tu nombre"
+                    id="name_category"
+                    placeholder="Escriba el nombre"
                     type="text"
                     class="form-control"
                   />
                 </td>
               </div>
             </tr>
-
-            <tr>
-              <div class="form-group">
-                <input type="hidden" th:field="*{id}" />
-
-                <td><label for="nombre">Email del Administrador</label></td>
-                <td>
-                  <input
-                    th:field="*{email}"
-                    id="email_admin"
-                    placeholder="Escribe tu e-mail"
-                    type="email"
-                    class="form-control"
-                  />
-                </td>
-              </div>
-            </tr>
             <tr>
               <div class="form-group">
                 <td>
-                  <label for="nombre">Contraseña del Administrador</label>
+                  <label for="descripcion">Descripcion</label>
                 </td>
                 <td>
-                  <input
-                    th:field="*{password}"
-                    id="psswd_admin"
-                    placeholder="Escribe la contraseña"
-                    type="password"
+                  <textarea
+                    th:field="*{description}"
+                    id="description_category"
+                    type="text"
+                    placeholder="Escriba la descripción aqui"
                     class="form-control"
-                  />
+                  ></textarea>
                 </td>
               </div>
             </tr>
@@ -105,18 +92,19 @@
               </button>
             </td>
             <td>
-              <button
-                type="button"
-                class="btn btn-danger"
-                onclick="location.href='/formAdmin/'"
-              >
-                Cancelar
-              </button>
-            </td>
+                <button
+                  type="button"
+                  class="btn btn-danger"
+                  onclick="location.href='/formCategory/'"
+                >
+                  Cancelar
+                </button>
+              </td>
           </table>
         </fieldset>
       </form>
     </div>
-    <br />
+
+
   </body>
 </html>
