--- a/src/main/resources/templates/formReservation.html
+++ b/src/main/resources/templates/formReservation.html
@@ -79,7 +79,7 @@
 				<td th:text="${r.client.idClient}"></td>
 				<td th:text="${r.client.name}"></td>
 				<td th:text="${r.client.email}"></td>
-				<td><span th:text="${r?.score?.rate}"></span>Sin puntuación</td>
+				<td><span th:text="${r?.score?.rate}"></span></td>
 			</tr>
 		</table>
 	</div>
